Fixed Backbuttonposition on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@ header, main, footer {
 }
 
 .button-back {
-    line-height: 64px;
-    height: 64px;
+    line-height: 58px;
+    height: 58px;
     font-size: 2.7rem;
     left: 0;
     position: fixed;
